# gaussquad

./: .buildinfo  .flake8  .gitignore  CITATION.cff  README.md  api.html  citation.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  citation.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.github/workflows/: ci.yml
_modules/: index.html
_modules/gaussquad/: gauss_quadrature.html
_sources/: api.rst  citation.md.txt  index.rst.txt
docs/source/: conf.py  index.rst  installation.md
main/: .buildinfo  api.html  citation.html  genindex.html  index.html  installation.html  search.html  searchindex.js
main/.doctrees/: api.doctree  citation.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
main/_modules/: index.html
main/_sources/: installation.md.txt  usage.md.txt
src/: examples.py
src/gaussquad/: __init__.py  _logging_utils.py  _moments.py  _validate_utils.py  gauss_quadrature.py
tests/: test_gauss_quadrature.py  test_moments.py  test_moments_exact.py  test_moments_legendre.py
v1.0.0-test/: .buildinfo  objects.inv  search.html  searchindex.js  usage.html
v1.0.0-test/.doctrees/: api.doctree  citation.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
v1.0.0-test/_modules/gaussquad/: gauss_quadrature.html
v1.0.0-test/_sources/: citation.md.txt  index.rst.txt
